2007-08-02  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS: Updated to contain Calvin and Scott
	* src/Utilities.cs, src/ServiceInfo.cs, src/TargetWindow.cs,
	  src/Logger.cs, src/GiverMenuItem.cs, src/PreferencesDialog.cs,
	  src/Defines.cs.in, src/ServiceLocator.cs, src/SendingHandler.cs,
	  src/RequestHandler.cs, src/UriList.cs, src/GiverService.cs,
	  src/Preferences.cs, src/Protocol.cs, src/Application.cs,
	  src/TransferStatusArgs.cs, src/TrayLib.cs, src/TargetService.cs,
	  src/PhotoService.cs: Changed header to MIT License
	* COPYING: Modified to MIT License
	* MAINTAINERS: Updated to contain everyone
	* NEWS: minor

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated for next iteration

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: updated to release version 0.1.7
	* NEWS: updated for release

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs: updated to quickly load all people on the
	  network

2007-07-16  Brady Anderson <brady.anderson@gmail.com> 

	* src/PhotoService.cs: added code to requeue the avatar update if it
	  fails

2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/RequestHandler.cs: changed buffer to 8K
	* src/Application.cs: removed notification window that was broken
	* src/TargetService.cs: changed progress notification to be time based

2007-07-15  Brady Anderson <brady.anderson@gmail.com> 

	* src/ServiceLocator.cs: used a different constructor when newing up
	  the service class.  asking specifically for IP4 addresses

2007-07-15  Calvin Gaisford <calvinrg@gmail.com> 

	* src/giver.in: fixed up the process name
	* src/ServiceLocator.cs: Added support for web avatars
	* src/SendingHandler.cs: changed the status messages
	* src/RequestHandler.cs: Added social message
	* configure.ac: changed the version after new release

2007-07-15  Calvin Gaisford <calvinrg@gmail.com> 
