@@ -1,2 +1,2 @@
 Calvin Gaisford <calvinrg@gmail.com>
-Scott Reeves <sreeves@novell.com>
+Scott Reeves <sreeves@gmail.com>
