@@ -1,4 +1,4 @@
 Calvin Gaisford <calvinrg@gmail.com>
-Scott Reeves <sreeves@novell.com>
+Scott Reeves <sreeves@gmail.com>
 Brady Anderson <brady.anderson@gmail.com>
 Boyd Timothy <btimothy@gmail.com>
